--- a/requirements.txt
+++ b/requirements.txt
@@ -1,182 +1,5 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiosignal==1.3.1
-altair==5.3.0
-annotated-types==0.7.0
-anyio==4.4.0
-arrow==1.3.0
-attrs==23.2.0
-backend==0.2.4.1
-backports.tarfile==1.2.0
-beautifulsoup4==4.12.3
-binaryornot==0.4.4
-blinker==1.9.0
-bs4==0.0.2
-cachetools==5.4.0
-certifi==2024.7.4
-chardet==3.0.4
-charset-normalizer==2.0.12
-click==8.1.7
-click-log==0.4.0
-colorama==0.4.6
-contourpy==1.3.2
-cookiecutter==2.6.0
-cycler==0.12.1
-dataclasses==0.6
-deprecation==2.1.0
-distlib==0.3.8
-distro==1.9.0
-docutils==0.21.2
-dotty-dict==1.3.1
-ecdsa==0.19.0
-fastapi==0.115.0
-filelock==3.14.0
-Flask==2.3.3
-Flask-Cors==3.0.10
-Flask-Mail==0.10.0
-Flask-SQLAlchemy==3.1.1
-flet==0.24.1
-flet-core==0.24.1
-flet-runtime==0.24.1
-fonttools==4.57.0
-fpdf==1.7.2
-frozenlist==1.4.1
-fsspec==2024.6.1
-generativeai==0.0.1
-gitdb==4.0.11
-GitPython==3.1.43
-google-ai-generativelanguage==0.6.6
-google-api-core==2.19.1
-google-api-python-client==2.137.0
-google-auth==2.32.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.7.2
-googleapis-common-protos==1.63.2
-googletrans==4.0.0rc1
-gotrue==1.3.1
-greenlet==3.1.1
-groq==0.4.1
-grpcio==1.65.1
-grpcio-status==1.62.2
-h11==0.14.0
-h2==3.2.0
-hpack==3.0.0
-hstspreload==2024.8.1
-httpcore==0.16.3
-httplib2==0.22.0
-httptools==0.6.1
-httpx==0.23.3
-huggingface-hub==0.24.6
-hyperframe==5.2.0
-idna==2.10
-importlib_metadata==7.2.1
-invoke==1.7.3
-itsdangerous==2.2.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-Jinja2==3.1.4
-jiter==0.8.2
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-keyring==25.6.0
-kiwisolver==1.4.8
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.10.1
-mdurl==0.1.2
-more-itertools==10.6.0
-multidict==6.0.5
-nh3==0.2.20
-numpy==1.26.4
-oauthlib==3.2.2
-openai==0.28.0
-packaging==23.2
-pandas==2.1.4
-Pillow==10.1.0
-pkginfo==1.12.1.2
-platformdirs==4.2.2
-plotly==5.18.0
-postgrest==0.10.7
-postgrest-py==0.10.6
-proto-plus==1.24.0
-protobuf==4.25.3
-psutil==7.0.0
-pyarrow==17.0.0
-pyasn1==0.4.8
-pyasn1_modules==0.4.0
-PyAudio==0.2.14
-pydantic==2.10.6
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.18.0
-pyparsing==3.1.2
-PyPDF2==3.0.1
-pypng==0.20220715.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-python-gitlab==3.15.0
-python-jose==3.4.0
-python-semantic-release==7.33.2
-python-slugify==8.0.4
-pytz==2024.1
-pywin32-ctypes==0.2.3
-PyYAML==6.0.2
-qrcode==7.4.2
-readme_renderer==44.0
-realtime==1.0.6
-referencing==0.35.1
-regex==2024.7.24
-repath==0.9.0
-requests==2.31.0
-requests-toolbelt==1.0.0
-rfc3986==1.5.0
-rich==13.7.1
-rpds-py==0.19.0
-rsa==4.9
-scikit-learn==1.5.2
-scipy==1.14.1
-semver==2.13.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.6
-SpeechRecognition==3.10.4
-SQLAlchemy==2.0.39
-starlette==0.38.6
-storage3==0.5.3
-streamlit==1.31.0
-streamlit-chat==0.1.1
-streamlit-lottie==0.0.5
-StrEnum==0.4.15
-stripe==10.8.0
-supabase==1.0.3
-supafunc==0.2.2
-tavily-python==0.3.5
-tenacity==8.5.0
-text-unidecode==1.3
-threadpoolctl==3.5.0
-tiktoken==0.7.0
-toml==0.10.2
-tomlkit==0.13.2
-toolz==0.12.1
-tornado==6.4.1
-tqdm==4.66.4
-twine==3.8.0
-types-python-dateutil==2.9.0.20240906
-typing_extensions==4.12.2
-tzdata==2024.1
-tzlocal==5.3.1
-uritemplate==4.1.1
-urllib3==1.26.20
-uvicorn==0.30.6
-validators==0.34.0
-virtualenv==20.26.2
-watchdog==4.0.1
-watchfiles==0.24.0
-websockets==12.0
-Werkzeug==3.1.3
-yarl==1.9.7
-youtube-search-python==1.6.6
-zipp==3.21.0
+groq
+scikit-learn
+pandas
+streamlit
+fpdf
